--- a/package.json
+++ b/package.json
@@ -14,10 +14,17 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.16.0",
     "axios": "^1.7.2",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-flags-select": "^2.2.3",
+    "react-i18next": "^14.1.2",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
+    "react-toastify": "^10.0.5",
+    "rsuite": "^5.66.0",
     "sass": "^1.77.7"
   },
   "devDependencies": {
