--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
+    "less": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-flags-select": "^2.2.3",
